# H1_acceptance_calc

./: CMakeLists.txt  G4History.macro  GNUmakefile  Main.cc  README.md  vis.mac
include/: ActionInitialization.hh  BaseBox.hh  BaseConstruct.hh  BaseTubs.hh  Beam.hh  DataManager.hh  DetectorConstruction.hh  DetectorWorld.hh  EventAction.hh  GlobalVariables.hh  Kapton.hh  LeadBlock.hh  Material.hh  Mesh.hh  MeshParam.hh  PrimaryGeneratorAction.hh  RootManager.hh  RunAction.hh  Scintillator.hh  ScintillatorObject.hh  Shield.hh  SteppingAction.hh  StoppingTarget.hh  TrackerHit.hh  VacuumVolume.hh  VisAttributes.hh  XMLObject.hh  XMLParamParser.hh
macro/: analysis_simu.C
src/: ActionInitialization.cc  BaseBox.cc  BaseConstruct.cc  BaseTubs.cc  DetectorConstruction.cc  DetectorWorld.cc  EventAction.cc  GlobalVariables.cc  Kapton.cc  Material.cc  Mesh.cc  MeshParam.cc  PrimaryGeneratorAction.cc  RunAction.cc  Scintillator.cc  SteppingAction.cc  TrackerHit.cc  VacuumVolume.cc  VisAttributes.cc  XMLParamParser.cc
